--- a/client/src/Components/Cards/Card.module.css
+++ b/client/src/Components/Cards/Card.module.css
@@ -3,21 +3,27 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f8f9fa;
+  background-color: rgb(255, 215, 0);
   padding: 1rem;
-  border-radius: 0.5rem;
+  border-radius: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin: 1rem;
   width: 200px;
+  font-family: 'Titan One',white;
+  border: 4px outset rgb(255, 215, 0);
 }
 
 .card img {
-  width: 100px;
-  height: 100px;
-}
+  width: 150px;
+  height: 150px;
+background-color: rgb(231, 243, 253);
+border-radius: 30px;
+border:3px solid }
+
 
 .card p {
   margin: 0.25rem 0;
+  font-size: 0.8rem;
 }
 
 .type {
@@ -28,19 +34,22 @@
 }
 
 .type p {
-  background-color: #6c757d;
+  background-color: #23241c;
   color: white;
   padding: 0.25rem 0.5rem;
   border-radius: 0.25rem;
   font-size: 0.8rem;
+  border: 2px solid rgb(26, 26, 26);
 }
 
 .button {
   margin-top: 1rem;
   padding: 0.25rem 0.5rem;
   border: none;
-  background-color: #6c757d;
+  background-color: rgb(73, 2, 153);
   color: white;
   border-radius: 0.25rem;
   cursor: pointer;
+  font-family: 'Titan One';
+  border: 2px solid black;
 }
