--- a/client/src/Views/Detail/Detail.module.css
+++ b/client/src/Views/Detail/Detail.module.css
@@ -1,37 +1,68 @@
 /* Detail.module.css */
 .detail {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   background-color: #f8f9fa;
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin: 1rem;
-  width: 300px;
+  width: 1000px;
+  font-family: 'Titan One';
+  font-size: 17px;
 }
-
+.backgroundVideo {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
+  object-fit: cover;
+  opacity: 0.5;
+}
 .detail img {
-  width: 150px;
-  height: 150px;
+  width: 220px;
+  height: 220px;
+  z-index: 1;
 }
 
-.detail p {
-  margin: 0.25rem 0;
+.type-item {
+  display: inline;
+  margin-right: 5px;
 }
 
 .closeButton {
-  background-color: #dc3545;
-  color: white;
-  padding: 0.25rem 0.5rem;
-  border: none;
-  border-radius: 0.25rem;
-  cursor: pointer;
-  float: right;
+	box-shadow:inset 0px 1px 0px 0px #f29c93;
+	background:linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%);
+	background-color:#fe1a00;
+	border-radius:6px;
+	border:1px solid #d83526;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	font-weight:bold;
+	padding:10px 12px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #b23e35;
 }
+.closeButton:hover {
+	background:linear-gradient(to bottom, #ce0100 5%, #fe1a00 100%);
+	background-color:#ce0100;
+}
+.closeButton:active {
+	position:relative;
+	top:1px;
+}
+
 .container {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
-  height: 100vh;
+  height: 80vh;
+  margin-left: 10%;
 }
+
